<resources>
    <string name="app_name">LunchConnect</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="user_profile_management">User Profile Management</string>
    <string name="user_profile">User Profile</string>


    <string name="friends">Friends</string>


    <string name="points_and_badges_back_button_description">Goes back to the main activity</string>
    <string name="points_and_badges_profile_pic_description">Displays the users profile picture</string>
    <string name="points_and_badges_badge_view_description">Displays the users badges</string>
    <string name="points_and_badges_greeting1">Welcome To</string>
    <string name="points_and_badges_greeting2">LunchConnect</string>
    <string name="points_and_badges_view_tier_benefits">View Tier Benefits >></string>
    <string name="points_and_badges_tier">TIER</string>
    <string name="points_and_badges_tier_progress">Get %d more points to Tier %d</string>
    <string name="points_and_badges_points_menu_header">You have</string>
    <string name="points_and_badges_points_display">370</string>
    <string name="points_and_badges_points_description">LunchConnect Points</string>
    <string name="points_and_badges_view_point_history">View my point history >></string>
    <string name="points_and_badges_badges_header">Badges for the winner!</string>

    <string name="groups_header">Groups</string>
    <string name="groups_sub_header">Groups Near Me</string>
    <string name="groups_add_group">Navigates to the add group page.</string>
    <string name="groups_groups_google_map">Google maps api</string>
    <string name="groups_groups_view_scroll">Container to hold all existing groups.</string>
    <string name="groups_groups_card_group_name">[Group Name]</string>
    <string name="groups_groups_card_group_creator">[Created by Creator]</string>
    <string name="groups_groups_card_food_genre">Mexican</string>
    <string name="groups_groups_card_time_stamp">1.00 PM - 2.00 PM</string>
    <string name="groups_groups_card_group_description_header">Description:</string>
    <string name="groups_groups_card_group_description">Going to eat mexican at Guzman Y Gomez today! All are welcome, feel free to join!</string>
    <string name="groups_groups_card_group_who_coming">Who\'s Coming:</string>
    <string name="groups_groups_card_join">JOIN</string>
    <string name="groups_groups_card_info">INFO</string>

    <!-- Strings used for Google Map Api -->
    <string name="details_demo_title">Place Details</string>
    <string name="details_demo_description">Fetch and display selected details about a Place</string>
    <string name="autocomplete_fragment_demo_title">Place Autocomplete</string>
    <string name="autocomplete_fragment_demo_description">Provide type-ahead predictions of Places as the user types in an input field.</string>
    <string name="current_demo_title">Current Place</string>
    <string name="current_demo_description">Suggest possible places that match the device\'s current location</string>
    <string name="button_details">Get Details</string>
    <string name="details_input_hint">Enter a Place ID</string>
    <string name="details_input_default">ChIJ-fIL2vnvTxkRaNUY32NGBYs</string>
    <string name="current_button">Get Current Place</string>

    <!--    TODO: Change Hardcoded Questionnaire -->
    <string name="Questionnaire1">What initially sparked your interest in this field or profession?</string>
    <string name="Questionnaire2">What do you find most rewarding about your work?</string>
    <string name="Questionnaire3">What are some of your hobbies or interests outside of work?</string>
    <string name="Questionnaire4">What is one thing on your bucket list that you hope to accomplish someday?</string>
    <string name="Questionnaire5">Do you enjoy any sports or physical activities? Which ones?</string>
    <string name="Questionnaire6">What is your go-to way to relax or unwind after a busy day?</string>

    <!-- String for Login Screen-->
    <string name="lunch_invitation">Hey, you there,\nwant to have lunch\ntogether?</string>



</resources>